fix(docker): 修正 Dockerfile 中的檔案路徑以正確複製需求檔案和應用程式檔案
修正了 Dockerfile 中的 COPY 指令，確保正確複製 app 目錄下的 requirements.txt 和 main.py 檔案。

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,11 +9,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # 複製需求檔案並安裝 Python 相依套件
-COPY requirements.txt .
+COPY app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # 複製應用程式檔案
-COPY main.py .
+COPY app/main.py .
 
 # 建立備份目錄
 RUN mkdir -p /tmp/qdrant_snapshots
