--- a/docker-compose.registry.yml
+++ b/docker-compose.registry.yml
@@ -49,7 +49,7 @@ services:
   # Qdrant 主服務
   qdrant:
     image: qdrant/qdrant:latest
-    container_name: qdrant-main
+    container_name: qdrant-secure
     ports:
       - "6333:6333"
     environment:
